fixing spacing issues on footer

--- a/scss/pages/_loginPage.scss
+++ b/scss/pages/_loginPage.scss
@@ -73,7 +73,7 @@
 
 @media screen and (max-aspect-ratio: 1/1) {
   .login-form-page {
-    padding: 90px 0 20vh 0;
+    padding: 90px 0 0 0;
     margin: 0 0 20vh 0;
   }
 }
