--- a/scss/parts/_footer.scss
+++ b/scss/parts/_footer.scss
@@ -78,7 +78,7 @@
     left: 0;
     right: 0;
     margin: 0 10px;
-    padding-top: 50vh;
+    padding-top: 100vh;
     z-index: -1;
 
     .upper-footer {
